--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
         
         <ul>
             <li>Home</li>
-            <li>Try Speech2Sign</li>
+            <a href="./Converter/index.html"><li>Try Speech2Sign</li></a>
             <li>About Developers</li>
         </ul>
     </header>
-    <a href="../index.html">Click here to try out speech2sign</a>
 </body>
 <script src="./script.js"></script>
 
