--- a/Converter/index.html
+++ b/Converter/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Speech2Sign<h1>
             <textarea id="convert_textarea" placeholder="Click on the mic icon or type your text here..."></textarea>
-            <img id="mic_icon" src="./Resources/mute.png" height="100">
+            <img id="mic_icon" src="./Assets/mute.png" height="100">
             <!-- The following code needs to be replaced with a element that will display the animated signs -->
             <textarea id="sign_textarea" placeholder="Animation of Sign Language..."></textarea>
             <!-- End -->
