--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="branding">
-            <img src="./Resources/Speech2Sign_logo2.png" height="100">
+            <img src="./Resources/Speech2Sign_logo2.png" height="100" draggable="false">
         </div>
         
         <ul>
