Updated main website

--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
 </head>
 
 <body>
-    <header>
-        <div class="branding">
-            <img src="./Resources/Speech2Sign_logo2.png" height="100" draggable="false">
-        </div>
-        
-        <ul>
-            <li>Home</li>
-            <a href="./Converter/index.html"><li>Try Speech2Sign</li></a>
-            <li>About Developers</li>
-        </ul>
-    </header>
+    <div id="main_div-1">
+        <video autoplay loop muted>
+            <source src="./Resources/bg1_vid.mp4" type="video/mp4">
+        </video>
+
+        <header>
+            <ul>
+                <li>Home</li>
+                <a href="./Converter/index.html">
+                    <li>Try Speech2Sign</li>
+                </a>
+                <li>About Developers</li>
+            </ul>
+        </header>
+        <img src="./Resources/Speech2Sign_logo3.png" class="branding" draggable="false">
+        <a href="#main_div-2"><button class="discover_btn">Explore!</button></a>
+    </div>
 </body>
 <script src="./script.js"></script>
 
