--- a/Converter/index.html
+++ b/Converter/index.html
@@ -10,13 +10,22 @@
 </head>
 
 <body>
-    <a href="../index.html"><img src="./Assets/Speech2Sign_logo2.png" height="100"></a>
-    <textarea id="input_textarea" placeholder="Click on the mic icon or type your text here..."></textarea>
-    <img id="mic_icon" src="./Assets/mute.png" height="100">
-    <img src="./Assets/white.png" id="output">
-    <button id="convert_btn">Translate</button>
+    <div class="div_logo"><a href="../index.html"><img src="./Assets/Speech2Sign_logo2.png" draggable="false"></a></div>
+    <div class="main_div">
+        <div class="div_1">
+            <textarea id="input_textarea" placeholder="Click on the mic icon or type your text here..."></textarea>
+            <div class="div_1-2">
+                <img id="mic_icon" src="./Assets/mute.png" draggable="false">
+                <button id="convert_btn">Translate</button>
+            </div>
+        </div>
+        <div class="div_2">
+            <img src="./Assets/white.png" id="output">
+        </div>
+    </div>
     <h4 class="credits">Developed by Abdul Swareeh, Aryan Shah, Abdul Hadi and Shubadhip</h4>
 </body>
+
 
 <script src="./script.js"></script>
 
