Speech2Sign SparkX final upload

--- a/Pages/about-dev.html
+++ b/Pages/about-dev.html
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="card">
                 <div class="img-box">
-                    <img src="../Resources/Abdul Swareeh.jpeg">
+                    <img src="../Resources/me3.jpeg">
                 </div>
                 <div class="content">
                     <div class="content-box">
