--- a/Pages/about-dev.html
+++ b/Pages/about-dev.html
@@ -24,9 +24,9 @@
                         <a href="../index.html">
                             <li>Home</li>
                         </a>
-                        <a href="../Converter/index.html">
+                        <!-- <a href="../Converter/index.html">
                             <li>Try Speech2Sign</li>
-                        </a>
+                        </a> -->
                         <a href="./about-dev.html">
                             <li>About Developers</li>
                         </a>
